--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
   <body>
     <p>JS homework 7</p>
 
-    <div>Домашнє завдання
-      <br>-----1----
-      <br>Напишіть такий JavaScript, щоб після натискання на кнопку button, елемент
-      <div id="text"> зникав.
-        <br>-----2----
-        <br>Напишіть такий код, щоб після натискання на кнопку, вона зникала.
-        <br>-----3----
-        <br>Створіть дерево, яке показує/приховує дочірні вузли при кліці</div>
+    <div>
+      Домашнє завдання <br />-----1---- <br />Напишіть такий JavaScript, щоб після натискання на кнопку button, елемент
+      &lt;div id="text"&gt; зникав. <br />-----2---- <br />Напишіть такий код, щоб після натискання на кнопку, вона
+      зникала. <br />-----3---- <br />Створіть дерево, яке показує/приховує дочірні вузли при кліці <br /><br />
+      <div id="text">this is div need to be hidden by click on button</div>
+      <button id="hideDiv">hide div</button>
+      <button id="hideBtn">hide btn</button>
+      <button id="toggleBtn">togle</button>
+    </div>
     <div id="output"></div>
     <script src="./script/script.js"></script>
   </body>
