--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
       <div id="text">this is div need to be hidden by click on button</div>
       <button id="hideDiv">hide div</button>
       <button id="hideBtn">hide btn</button>
-      <button id="toggleBtn">togle</button>
+      <ul class="tree">
+        <li>
+          <span>Батьківський вузол 1</span>
+          <ul>
+            <li><span>Дочірній вузол 1.1</span></li>
+            <li><span>Дочірній вузол 1.2</span></li>
+          </ul>
+        </li>
+        <li>
+          <span>Батьківський вузол 2</span>
+          <ul>
+            <li><span>Дочірній вузол 2.1</span></li>
+          </ul>
+        </li>
+      </ul>
     </div>
     <div id="output"></div>
     <script src="./script/script.js"></script>
